fix: fix animation on safari and hide on back button

--- a/static/style.css
+++ b/static/style.css
@@ -127,45 +127,56 @@ table {
     padding-top: 10px;
 }
 
-.loader-line {
-    width: 200px;
-    height: 3px;
+.progress{
     position: relative;
-    overflow: hidden;
-    background-color: #ddd;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-}
-
-.loader-line:before {
-    content: "";
-    position: absolute;
-    left: -50%;
     height: 3px;
-    width: 40%;
-    background-color: coral;
-    -webkit-animation: lineAnim 1s linear infinite;
-    -moz-animation: lineAnim 1s linear infinite;
-    animation: lineAnim 1s linear infinite;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
+    width: clamp(15%, 220px, 80%);
+    border-radius: 15px;
 }
 
-@keyframes lineAnim {
-    0% {
-        left: -40%;
-    }
-    50% {
-        left: 20%;
-        width: 80%;
-    }
-    100% {
-        left: 100%;
-        width: 100%;
-    }
+.progress .color{
+    transform-origin: left;
+    width: 100%;
+    height: 3px;
+    border-radius: 15px;
+    animation: progres 2.6s infinite linear;    
 }
+
+@keyframes progres{
+    0%{
+        transform: scaleX(0%);
+    }
+    25%{
+        transform: scaleX(25%);
+    }
+    50%{
+        transform: scaleX(50%);
+    }
+    75%{
+        transform: scaleX(85%);
+    }
+    100%{
+        transform: scaleX(100%);
+    }
+};
+
+@-webkit-keyframes progres{
+    0%{
+        transform: scaleX(0%);
+    }
+    25%{
+        transform: scaleX(25%);
+    }
+    50%{
+        transform: scaleX(50%);
+    }
+    75%{
+        transform: scaleX(85%);
+    }
+    100%{
+        transform: scaleX(100%);
+    }
+};
 
 @media (min-width:1025px) {
     .links:active {
@@ -213,6 +224,12 @@ table {
     }
     #loader {
         background-color: rgb(249, 249, 249);
+    }
+    .progress {
+        border: 3px solid #2318f5;
+    }
+    .progress .color {
+        background-color: #d540e6;
     }
 }
 
@@ -262,6 +279,12 @@ table {
     }
     #loader {
         background-color: #121212;
+    }
+    .progress {
+        border: 3px solid #f4a261;
+    }
+    .progress .color {
+        background-color: #ffffff;
     }
 }
 
